--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -90,6 +90,10 @@ nav ul {
 max-width: 580px;
 }
 
+.text-center{
+    text-align: center;
+}
+
 .header{
     background-image: url('/images/developer.png'), url('/images/header_bg.png');
     background-repeat: no-repeat;
@@ -115,9 +119,18 @@ max-width: 580px;
     border-radius: 10px;
     padding: 130px 150px;
     text-align: center;
+    
+}
+
+.under-about{
+    background-color: white;
+    padding: 30px;
+
+}
+
+main section{
     margin-top: 130px;
-
-
+    margin-bottom: 130px;
 }
 
 /* main styles */
@@ -136,3 +149,85 @@ main{
     justify-content: space-around;
 }
 
+.what-i-do{
+    padding: 100px;
+}
+
+/* skill section */
+.skill-container{
+    display: flex;
+    gap: 24px;
+    
+}
+
+.skill{
+    padding: 30px ;
+    box-shadow: 0 6px 50px 0px rgba(0, 0, 0, 0.06) ;
+    border-radius: 5px;
+}
+.skill-title{
+font-weight: bold;
+}
+
+.skill-description{
+    color: #757575;
+}
+
+/* resume section */
+
+.resume-container{
+    display: flex;
+    text-align: center;
+    gap: 24px;
+}
+.resume{
+    text-align: center;
+}
+
+.exprience-description, .exprience-sub-title {
+    color: rgba(117, 117, 117, 1);
+}
+
+.exprience-sub-title{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+
+.resume hr{
+    margin: 30px;
+}
+.download-button{
+    margin: 100px;
+    text-align: center;
+    color: white;
+    background-color: #FD6E0A;
+    padding: 20px;
+    border: none;
+    width: 200px;
+    font-size: 20px;
+    border-radius: 5px;
+}
+
+/* footer styles */
+footer{
+    padding:  130px 230px;
+    display: flex;
+    gap: 100px;
+}
+.footer-colum{
+    width: 50%;
+}
+
+footer input[type="text"], footer input[type="email"], footer textarea{
+    height: 64px;
+    border-radius: 5px;
+    background-color: white;
+    display: block;
+    width: 100%;
+    padding: 10px 20px;
+    margin-bottom: 24px;
+    border: #181818;
+    font-size: 16px;
+
+}
